--- a/TCG.CatalogService.API/appsettings.json
+++ b/TCG.CatalogService.API/appsettings.json
@@ -12,5 +12,9 @@
     "Host": "localhost",
     "Port": "27017"
   },
+  "RabbitMQSettings": {
+    "Host": "localhost",
+    "QueueName" : "catalogservice"
+  },
 "AllowedHosts": "*"
 }
