--- a/TCG.CatalogService.API/TCG.CatalogService.API.csproj
+++ b/TCG.CatalogService.API/TCG.CatalogService.API.csproj
@@ -12,15 +12,13 @@
         <PackageReference Include="MediatR" Version="11.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="TCG.Common" Version="1.2.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\TCG.CatalogService.Application\TCG.CatalogService.Application.csproj" />
       <ProjectReference Include="..\TCG.CatalogService.Domain\TCG.CatalogService.Domain.csproj" />
       <ProjectReference Include="..\TCG.CatalogService.Persitence\TCG.CatalogService.Persitence.csproj" />
-      <ProjectReference Include="..\TCG.Common\TCG.Common\TCG.Common.csproj">
-        <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
-      </ProjectReference>
     </ItemGroup>
 
 </Project>
