--- a/TCG.CatalogService.Application/TCG.CatalogService.Application.csproj
+++ b/TCG.CatalogService.Application/TCG.CatalogService.Application.csproj
@@ -8,7 +8,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\TCG.CatalogService.Domain\TCG.CatalogService.Domain.csproj" />
-      <ProjectReference Include="..\TCG.Common\TCG.Common\TCG.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -18,6 +17,7 @@
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="TCG.Common" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
