--- a/TCG.CatalogService.Persitence/TCG.CatalogService.Persitence.csproj
+++ b/TCG.CatalogService.Persitence/TCG.CatalogService.Persitence.csproj
@@ -22,6 +22,7 @@
       <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="TCG.Common" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
