--- a/TCG.CatalogService.API/TCG.CatalogService.API.csproj
+++ b/TCG.CatalogService.API/TCG.CatalogService.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -12,7 +12,7 @@
         <PackageReference Include="MediatR" Version="11.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-        <PackageReference Include="TCG.Common" Version="1.2.0" />
+        <PackageReference Include="TCG.Common" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
