--- a/TCG.CatalogService.Application/TCG.CatalogService.Application.csproj
+++ b/TCG.CatalogService.Application/TCG.CatalogService.Application.csproj
@@ -11,13 +11,20 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.1.1" />
+      <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
       <PackageReference Include="FluentValidation" Version="11.5.1" />
       <PackageReference Include="Mapster" Version="7.3.0" />
       <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="NEST" Version="7.17.5" />
       <PackageReference Include="TCG.Common" Version="1.3.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Search\DTO\" />
     </ItemGroup>
 
 </Project>
