--- a/TCG.CatalogService.Domain/TCG.CatalogService.Domain.csproj
+++ b/TCG.CatalogService.Domain/TCG.CatalogService.Domain.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
       <PackageReference Include="MongoDB.Bson" Version="2.19.1" />
+      <PackageReference Include="NEST" Version="7.17.5" />
       <PackageReference Include="TCG.Common" Version="1.3.2" />
     </ItemGroup>
 
