Refactoring de la DI des repos Mongo + Ajout insertion/recuperation en base des extensions

--- a/TCG.CatalogService.API/appsettings.json
+++ b/TCG.CatalogService.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ServiceSettings": {
-    "ServiceName": "Item"
+    "ServiceName": "PokemonCollection"
   },
   "MongoDbSettings": {
     "Host": "localhost",
