--- a/TCG.CatalogService.API/TCG.CatalogService.API.csproj
+++ b/TCG.CatalogService.API/TCG.CatalogService.API.csproj
@@ -9,12 +9,13 @@
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
     <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
     <ItemGroup>
+        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.0.0" />
         <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.1.1" />
         <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
         <PackageReference Include="MediatR" Version="11.1.0" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-        <PackageReference Include="TCG.Common" Version="1.3.19" />
+        <PackageReference Include="TCG.Common" Version="1.3.20" />
     </ItemGroup>
 
     <ItemGroup>
