--- a/TCG.CatalogService.API/appsettings.Production.json
+++ b/TCG.CatalogService.API/appsettings.Production.json
@@ -10,11 +10,13 @@
     "ServiceName": "PokemonCollection"
   },
   "MongoDbSettings": {
-    "Host": "20.56.185.40",
-    "Port": "27017"
+    "Host": "20.23.228.245",
+    "Port": "27017",
+    "User": "admin",
+    "Password": "password"
   },
   "RabbitMQSettings": {
-    "Host": "20.76.119.90",
-    "QueueName" : "catalogservice"
+    "Host": "rabbitmq://20.23.228.245:5672/",
+    "QueueName": "catalogservice"
   }
 }
