--- a/TCG.CatalogService.Persistence/TCG.CatalogService.Persistence.csproj
+++ b/TCG.CatalogService.Persistence/TCG.CatalogService.Persistence.csproj
@@ -7,24 +7,23 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TCG.CatalogService.Application\TCG.CatalogService.Application.csproj" />
       <ProjectReference Include="..\TCG.CatalogService.Domain\TCG.CatalogService.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.1.1" />
-      <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
-      <PackageReference Include="FluentValidation" Version="11.5.1" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
       <PackageReference Include="Mapster" Version="7.3.0" />
       <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-      <PackageReference Include="NEST" Version="7.17.5" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="TCG.Common" Version="1.3.30" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Search\DTO\" />
     </ItemGroup>
 
 </Project>
