--- a/TCG.CatalogService.API/appsettings.Production.json
+++ b/TCG.CatalogService.API/appsettings.Production.json
@@ -10,10 +10,10 @@
     "ServiceName": "PokemonCollection"
   },
   "MongoDbSettings": {
-    "Host": "20.23.228.245",
+    "Host": "51.145.249.188",
     "Port": "27017",
-    "User": "admin",
-    "Password": "password"
+    "User": "admincsc",
+    "Password": "ZqJt6bjmL6JsIiQ1"
   },
   "RabbitMQSettings": {
     "Host": "rabbitmq://20.23.228.245:5672/",
