maj appsettings pour vps ovh savegarde images aws

--- a/TCG.CatalogService.API/appsettings.json
+++ b/TCG.CatalogService.API/appsettings.json
@@ -9,12 +9,12 @@
     "ServiceName": "PokemonCollection"
   },
   "MongoDbSettings": {
-    "Host": "localhost",
+    "Host": "51.210.180.174",
     "Port": "27017"
   },
   "RabbitMQSettings": {
-    "Host": "localhost",
-    "QueueName" : "catalogservice"
+    "Host": "51.210.180.174",
+    "QueueName": "catalogservice"
   },
 "AllowedHosts": "*"
 }
