--- a/TCG.CatalogService.Persistence/TCG.CatalogService.Persistence.csproj
+++ b/TCG.CatalogService.Persistence/TCG.CatalogService.Persistence.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.S3" Version="3.7.203.7" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
       <PackageReference Include="Mapster" Version="7.3.0" />
       <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
