--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,7 +3,7 @@
 	<packageSources>
 		<clear />
 		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-		<add key="ProjetCSC" value="https://pkgs.dev.azure.com/ProjetCSC/_packaging/18cf48c5-4151-464c-bb5a-65b746cb6755/nuget/v3/index.json" />
+		<add key="ProjetCSC" value="/Users/val/Desktop/TCGP-Renew/Common/TCG.Common/bin/Release" />
     </packageSources>
 	<packageSourceCredentials>
 		<ProjetCSC>
